# BGA2SVM

./: .gitignore  CMakeLists.txt
ResultAnalyse/: CMakeLists.txt  readme.txt
ResultAnalyse/gui/: compareInfoWindow.ui  confusionMatrix.ui  difficultSignsWindow.ui  mainwindow.ui  methodInfoWindow.ui  pictureWidget.ui  progressWindow.ui  settingsWindow.ui
ResultAnalyse/include/: CMProxyModel.h  CMTableModel.h  TSRDefs.h  compareInfoWindow.h  confusionMatrix.h  difficultSignsWindow.h  mainwindow.h  methodInfoWindow.h  pictureWidget.h  progressWindow.h  settingsWindow.h
ResultAnalyse/resources/: signs.qrc
ResultAnalyse/src/: CMProxyModel.cpp  CMTableModel.cpp  compareInfoWindow.cpp  confusionMatrix.cpp  difficultSignsWindow.cpp  main.cpp  (+6 more)
data/: labels_predictions10.csv  labels_predictions100.csv  labels_predictions105.csv  labels_predictions110.csv  labels_predictions115.csv  labels_predictions120.csv  labels_predictions125.csv  labels_predictions130.csv  labels_predictions135.csv  labels_predictions140.csv  labels_predictions145.csv  labels_predictions15.csv  labels_predictions150.csv  labels_predictions20.csv  labels_predictions25.csv  labels_predictions30.csv  labels_predictions34.csv  labels_predictions40.csv  labels_predictions45.csv  labels_predictions49.csv  labels_predictions5.csv  labels_predictions55.csv  labels_predictions60.csv  labels_predictions65.csv  labels_predictions70.csv  labels_predictions75.csv  labels_predictions80.csv  labels_predictions85.csv  labels_predictions90.csv  labels_predictions95.csv
inc/: gnuplot-iostream.h  ue3.h
src/: main.cpp
